{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 60,
  "lineage": "707396b5-ae57-5447-57de-c6b9ea151bf6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-015d47881ff230372",
            "owner_id": "143522921747",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-038dba997fecba1ae"
          },
          "depends_on": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-090df3b3e65036d34",
            "owner_id": "143522921747",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015d47881ff230372",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "vpc_id": "vpc-038dba997fecba1ae"
          },
          "depends_on": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d2e9a49ee598924",
            "route_table_id": "rtb-090df3b3e65036d34",
            "subnet_id": "subnet-0e97f1f7a1c780e56"
          },
          "depends_on": [
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143522921747:security-group/sg-0003ce02003b19911",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0003ce02003b19911",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20191111103231883300000001",
            "name_prefix": null,
            "owner_id": "143522921747",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-038dba997fecba1ae"
          },
          "depends_on": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143522921747:subnet/subnet-01652c077568e117b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01652c077568e117b",
            "map_public_ip_on_launch": false,
            "owner_id": "143522921747",
            "vpc_id": "vpc-038dba997fecba1ae"
          },
          "depends_on": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143522921747:subnet/subnet-0e97f1f7a1c780e56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e97f1f7a1c780e56",
            "map_public_ip_on_launch": true,
            "owner_id": "143522921747",
            "tags": {
              "Name": "prod-subnet-public-1"
            },
            "vpc_id": "vpc-038dba997fecba1ae"
          },
          "depends_on": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prodvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143522921747:vpc/vpc-038dba997fecba1ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042ec8fbe6149e0c5",
            "default_route_table_id": "rtb-0711063ea3b2b7cfc",
            "default_security_group_id": "sg-078e227a4ebacd532",
            "dhcp_options_id": "dopt-7f977d05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038dba997fecba1ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0711063ea3b2b7cfc",
            "owner_id": "143522921747"
          }
        }
      ]
    }
  ]
}